Renamed driver class; removed original test code.

--- a/build.xml
+++ b/build.xml
@@ -58,7 +58,7 @@
         <mkdir dir="build/jar"/>
         <jar destfile="build/jar/ChessOfChampions.jar" basedir="build/classes">
             <manifest>
-                <attribute name="Main-Class" value="Test"/>
+                <attribute name="Main-Class" value="Driver"/>
             </manifest>
             <fileset dir="src">
                 <include name="pieces/*.png"/>
