--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <property name="src.dir" location="src" />
     <property name="build.dir" location="build" />
     <property name="classes.dir" location="${build.dir}/classes" />
+	<property name="jar.dir" location="${build.dir}/jar" />
     <property name="build.version" value="1.0.0" />
 
     <tstamp>
@@ -13,33 +14,31 @@
     </tstamp>
 
     <target name="clean">
-        <delete dir="build"/>
+        <delete dir="${build.dir}"/>
     </target>
 
-
     <path id="classpath"> 
-        <pathelement location="lib/junit-4.12.jar" /> 
-        <pathelement location="lib/hamcrest-core-1.3.jar" /> 
+        <pathelement location="${lib.dir}/junit-4.12.jar" /> 
+        <pathelement location="${lib.dir}/hamcrest-core-1.3.jar" /> 
         <pathelement location="${classes.dir}"/> 
     </path> 
 
     <target name="compile">
-        <mkdir dir="build/classes"/>
+        <mkdir dir="${classes.dir}"/>
 
         <property name="version" value="Version:" />
-        <replaceregexp file="src/UI/UI.java"
+        <replaceregexp file="${src.dir}/UI/UI.java"
                    match="${version}\s[0-9]*.[0-9]*.[0-9]*"
                    byline="true"
                    replace="${version} ${build.version}" />
 
-        <javac srcdir="src" destdir="${classes.dir}">
+        <javac srcdir="${src.dir}" destdir="${classes.dir}">
             <classpath refid="classpath" />
         </javac>
 
-         <copy todir="build/classes/pieces">
+         <copy todir="${classes.dir}/pieces">
             <fileset dir="${src.dir}/pieces"/>
         </copy>
-
     </target>
 
     <target name="test" depends="compile">
@@ -55,12 +54,12 @@
     </target> 
 
     <target name="jar" depends="compile">
-        <mkdir dir="build/jar"/>
-        <jar destfile="build/jar/ChessOfChampions.jar" basedir="build/classes">
+        <mkdir dir="${jar.dir}"/>
+        <jar destfile="${jar.dir}/ChessOfChampions.jar" basedir="${classes.dir}">
             <manifest>
                 <attribute name="Main-Class" value="Driver"/>
             </manifest>
-            <fileset dir="src">
+            <fileset dir="${src.dir}">
                 <include name="pieces/*.png"/>
             </fileset>
         </jar>
